📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3214,5 +3214,109 @@
         "published": "Mon, 01 Dec 2025 01:12:03 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46102311\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/report/839506/ram-shortage-price-increases-pc-gaming-smartphones",
+        "title": "RAM is ruining everything",
+        "link": "https://www.theverge.com/report/839506/ram-shortage-price-increases-pc-gaming-smartphones",
+        "published": "2025-12-09T06:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Memory suppliers just blew a hole in the PC gaming industry - and they're about to do the same to everything else. For weeks, PC enthusiasts have borne the brunt of skyrocketing memory prices, but the shockwaves will soon impact a wider range of products as suppliers pour resources into a far bigger and more [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/can-bike-riders-and-self-driving-cars-be-friends/",
+        "title": "Can Bike Riders and Self-Driving Cars Be Friends?",
+        "link": "https://www.wired.com/story/can-bike-riders-and-self-driving-cars-be-friends/",
+        "published": "Tue, 09 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Some cycling advocates are on board with robotaxis. Others see the self-driving car boom as perpetuating auto dependency."
+    },
+    {
+        "id": "https://www.wired.com/story/bitcoin-miners-pivot-ai-data-centers/",
+        "title": "America\u2019s Biggest Bitcoin Miners Are Pivoting to AI",
+        "link": "https://www.wired.com/story/bitcoin-miners-pivot-ai-data-centers/",
+        "published": "Tue, 09 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "In the face of a profitability crisis, industrial-scale bitcoin miners are transforming their data centers into AI factories."
+    },
+    {
+        "id": "https://gizmodo.com/tony-gilroy-andor-season-2-ending-bix-cassian-death-star-wars-rogue-one-2000697016",
+        "title": "Tony Gilroy Is Still Letting \u2018Andor\u2019 Theorists Down Gently",
+        "link": "https://gizmodo.com/tony-gilroy-andor-season-2-ending-bix-cassian-death-star-wars-rogue-one-2000697016",
+        "published": "Tue, 09 Dec 2025 11:00:00 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Andor Season 2 Ending Bix\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/05/andor-season-2-ending-bix.jpg\" width=\"1500\" /><br /><br />Months on from the end of 'Andor' season 2, the showrunner is still taking time to discuss his intent around the show's final moments."
+    },
+    {
+        "id": "https://gizmodo.com/the-letterboxd-video-store-will-open-on-wednesday-and-looks-awesome-2000696606",
+        "title": "The Letterboxd \u2018Video Store\u2019 Will Open on Wednesday and Looks Awesome",
+        "link": "https://gizmodo.com/the-letterboxd-video-store-will-open-on-wednesday-and-looks-awesome-2000696606",
+        "published": "Tue, 09 Dec 2025 10:30:11 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"The Letterboxd icon in the App Store on an iPhone\" class=\"attachment-full size-full wp-post-image\" height=\"1001\" src=\"https://gizmodo.com/app/uploads/2025/12/letterboxd.jpg\" width=\"1500\" /><br /><br />Let us all give our money to Letterboxd."
+    },
+    {
+        "id": "https://mashable.com/video/jimmy-kimmel-trump-horrible",
+        "title": "Jimmy Kimmel has the perfect response to Trump calling him horrible",
+        "link": "https://mashable.com/video/jimmy-kimmel-trump-horrible",
+        "published": "Tue, 09 Dec 2025 10:49:33 +0000",
+        "source": "Mashable",
+        "summary": "Jimmy Kimmel has responded to Trump calling him a \"horrible\" host."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-apple-ipad-air-deal",
+        "title": "The 11-inch Apple iPad Air (M3, 128GB, WiFi) has dropped below $500 at Amazon",
+        "link": "https://mashable.com/article/dec-9-apple-ipad-air-deal",
+        "published": "Tue, 09 Dec 2025 10:04:02 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 9, the 11-inch Apple iPad Air (M3, 128GB, WiFi) is discounted to $449.99 at Amazon, with the help of an additional coupon on the store page. It usually retails for $599, so this saves you $149.01."
+    },
+    {
+        "id": "https://mashable.com/article/raptors-knicks-nba-cup-2025-live-stream-for-free",
+        "title": "How to watch Raptors vs. Knicks online for free",
+        "link": "https://mashable.com/article/raptors-knicks-nba-cup-2025-live-stream-for-free",
+        "published": "Tue, 09 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Live stream Toronto Raptors vs. New York Knicks in the NBA Cup for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/magic-heat-nba-cup-2025-live-stream-for-free",
+        "title": "How to watch Magic vs. Heat online for free",
+        "link": "https://mashable.com/article/magic-heat-nba-cup-2025-live-stream-for-free",
+        "published": "Tue, 09 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Live stream Orlando Magic vs. Miami Heat in the NBA Cup for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-deeper-connect-air-portable-vpn-travel-router",
+        "title": "Tech-savvy travelers will geek out over this VPN router",
+        "link": "https://mashable.com/article/dec-9-deeper-connect-air-portable-vpn-travel-router",
+        "published": "Tue, 09 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Get the Deeper Connect Air Portable Decentralized VPN Travel Router for just $169 with free shipping\u2014perfect for travelers and remote workers this holiday season."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-android-smartwatch/",
+        "title": "Best Android smartwatches of 2025: I tested every popular watch so you can find the perfect fit",
+        "link": "https://www.zdnet.com/article/best-android-smartwatch/",
+        "published": "Tue, 09 Dec 2025 11:00:32 GMT",
+        "source": "Latest news",
+        "summary": "From the rugged Galaxy Watch Ultra to the elegant Pixel Watch 4 smartwatch, we tested the best Wear OS smartwatches for Android smartphone users to help you choose the right one."
+    },
+    {
+        "id": "https://www.segasaturnshiro.com/2025/11/27/the-joy-of-playing-grandia-on-sega-saturn/",
+        "title": "The Joy of Playing Grandia, on Sega Saturn",
+        "link": "https://www.segasaturnshiro.com/2025/11/27/the-joy-of-playing-grandia-on-sega-saturn/",
+        "published": "Tue, 09 Dec 2025 09:48:55 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46203138\">Comments</a>"
+    },
+    {
+        "id": "https://www.gilesthomas.com/2025/12/llm-from-scratch-28-training-a-base-model-from-scratch",
+        "title": "LLM from scratch, part 28 \u2013 training a base model from scratch on an RTX 3090",
+        "link": "https://www.gilesthomas.com/2025/12/llm-from-scratch-28-training-a-base-model-from-scratch",
+        "published": "Tue, 02 Dec 2025 18:17:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46124425\">Comments</a>"
     }
 ]
