📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3318,5 +3318,101 @@
         "published": "Tue, 02 Dec 2025 18:17:48 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46124425\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/features/839853/disinformation-wars-censorship-right-wing",
+        "title": "The war on disinformation is a losing battle",
+        "link": "https://www.theverge.com/features/839853/disinformation-wars-censorship-right-wing",
+        "published": "2025-12-09T07:00:00-05:00",
+        "source": "The Verge",
+        "summary": "As he called the House Judiciary Committee into session on a cold and snowy February day in Washington, DC, Chairman Jim Jordan was ready to take a victory lap. American free speech had been critically threatened, and now it was saved - in large part thanks to him and his committee. \"What a difference a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/840557/nvidia-h200-ai-chips-china-exports-us",
+        "title": "Trump says Nvidia can sell more powerful AI chips to China",
+        "link": "https://www.theverge.com/news/840557/nvidia-h200-ai-chips-china-exports-us",
+        "published": "2025-12-09T06:26:58-05:00",
+        "source": "The Verge",
+        "summary": "Nvidia has received White House approval to start exporting its H200 AI GPU chips to \"approved customers\" in China and other countries, according to President Donald Trump. In a Truth Social post on Monday, Trump said the deal comes with \"conditions that allow for continued strong national security,\" and that the US will take a [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-advent-calendar/",
+        "title": "The 26 Best Advent Calendars (2025): It's OK if You Start Late",
+        "link": "https://www.wired.com/gallery/best-advent-calendar/",
+        "published": "Tue, 09 Dec 2025 12:07:00 +0000",
+        "source": "WIRED",
+        "summary": "Treat yourself or someone else to days of little gifts, ranging from sweet treats and savory beverages to beauty products and toys. We found a tiny door for everyone."
+    },
+    {
+        "id": "https://www.wired.com/story/the-big-interview-podcast-san-francisco-mayor-daniel-lurie/",
+        "title": "San Francisco Mayor Daniel Lurie: \u2018We Are a City on the Rise\u2019",
+        "link": "https://www.wired.com/story/the-big-interview-podcast-san-francisco-mayor-daniel-lurie/",
+        "published": "Tue, 09 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Since taking office, San Francisco\u2019s mayor has been on a quest to revitalize the city and increase public safety. He\u2019s also kept the National Guard out\u2014with a little help from some very powerful friends."
+    },
+    {
+        "id": "https://gizmodo.com/rhea-seehorn-pluribus-season-finale-2000696992",
+        "title": "Rhea Seehorn Is Already Obsessing Over the \u2018Pluribus\u2019 Season Finale",
+        "link": "https://gizmodo.com/rhea-seehorn-pluribus-season-finale-2000696992",
+        "published": "Tue, 09 Dec 2025 12:00:08 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Rhea Seehorn Pluribus\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Rhea-Seehorn-Pluribus.jpg\" width=\"1920\" /><br /><br />The star of the hit Apple TV show knows how season one ends and loves it."
+    },
+    {
+        "id": "https://gizmodo.com/claude-beta-feature-means-vibecoding-will-now-only-require-a-slack-message-2000697040",
+        "title": "Claude Beta Feature Means Vibecoding Will Now Only Require a Slack Message",
+        "link": "https://gizmodo.com/claude-beta-feature-means-vibecoding-will-now-only-require-a-slack-message-2000697040",
+        "published": "Tue, 09 Dec 2025 11:30:59 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Claude Code on a desktop computer\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/claude-code.jpg\" width=\"1500\" /><br /><br />In theory, you just @ it and it gets to work."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-league-battle-deck-team-rockets-mewtwo-ex-preorder-deal",
+        "title": "Pok\u00e9mon TCGs League Battle Deck - Team Rockets Mewtwo ex is up for preorder at over $10 below Amazon on TCGPlayer right now",
+        "link": "https://mashable.com/article/dec-9-league-battle-deck-team-rockets-mewtwo-ex-preorder-deal",
+        "published": "Tue, 09 Dec 2025 11:52:48 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 9, Pok\u00e9mon TCG League Battle Deck - Team Rocket's Mewtwo ex is over $10d cheaper on TCGPlayer vs. Amazon and has everything you need to battle."
+    },
+    {
+        "id": "https://mashable.com/video/stephen-colbert-trump-jimmy-kimmel",
+        "title": "Stephen Colbert weighs in on Trumps latest comments about Jimmy Kimmel",
+        "link": "https://mashable.com/video/stephen-colbert-trump-jimmy-kimmel",
+        "published": "Tue, 09 Dec 2025 11:45:21 +0000",
+        "source": "Mashable",
+        "summary": "Stephen Colbert has weighed in on Trump calling Jimmy Kimmel \"horrible\" prior to hosting the Kennedy Cennter Honors on Sunday."
+    },
+    {
+        "id": "https://readwrite.com/175000-care-home-fraud-fund-gambling-habit/",
+        "title": "UK prosecutors find $234K care home fraud was used to fund a gambling habit",
+        "link": "https://readwrite.com/175000-care-home-fraud-fund-gambling-habit/",
+        "published": "Tue, 09 Dec 2025 11:01:23 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Dudley Council image of care home fraud\" class=\"attachment-medium size-medium wp-post-image\" height=\"191\" src=\"https://readwrite.com/wp-content/uploads/2025/12/UK-prosecutors-find-175000-care-home-fraud-was-used-to-fund-a-gambling-habit-300x191.jpg\" style=\"width: 100%; height: 63.54%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A care home in the British West Midlands has been investigated for a \u00a3175,000 ($233,600) document-fraud scheme that led to&#8230; <a class=\"more-link\" hr"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-t-mobile-holiday-phone-deals/",
+        "title": "You can save hundreds on a new phone with T-Mobile's holiday deals - here are the 5 best",
+        "link": "https://www.zdnet.com/article/best-t-mobile-holiday-phone-deals/",
+        "published": "Tue, 09 Dec 2025 11:10:51 GMT",
+        "source": "Latest news",
+        "summary": "Multiple smartphones from various brands are currently free at T-Mobile. Get them while supplies last."
+    },
+    {
+        "id": "https://algodrill.io",
+        "title": "Show HN: AlgoDrill \u2013 Interactive drills to stop forgetting LeetCode patterns",
+        "link": "https://algodrill.io",
+        "published": "Tue, 09 Dec 2025 11:09:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46203581\">Comments</a>"
+    },
+    {
+        "id": "https://airbus-seclab.github.io/qemu_blog/tcg_p1.html",
+        "title": "A deep dive into QEMU: The Tiny Code Generator (TCG), part 1",
+        "link": "https://airbus-seclab.github.io/qemu_blog/tcg_p1.html",
+        "published": "Tue, 02 Dec 2025 13:42:43 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46121105\">Comments</a>"
     }
 ]
