📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3414,5 +3414,125 @@
         "published": "Tue, 02 Dec 2025 13:42:43 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46121105\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/840570/ifixit-app-android-ios-fixbot-ai",
+        "title": "iFixit\u2019s FixBot helps with repairs \u2018the way a master technician would\u2019",
+        "link": "https://www.theverge.com/news/840570/ifixit-app-android-ios-fixbot-ai",
+        "published": "2025-12-09T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "DIY repair site iFixit has launched its own app for iOS and Android, featuring its extensive library of repair guides and resources, a battery health monitor, and a new AI \"FixBot\" tool that's been trained on those same guides to help with repairs. The heart of the new app is the company's existing library of [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-shop-for-a-mechanical-keyboard/",
+        "title": "How to Shop for a Mechanical Keyboard (2025): Switches, Materials, and Layouts Explained",
+        "link": "https://www.wired.com/story/how-to-shop-for-a-mechanical-keyboard/",
+        "published": "Tue, 09 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Want to wade into the world of mechanical keyboards? We break down the terminology, phrases, and materials to make the experience less overwhelming."
+    },
+    {
+        "id": "https://www.wired.com/story/ifixit-chatbot-app-fixbot-point-your-camera-at-what-you-want-to-fix/",
+        "title": "iFixit Put a Chatbot Repair Expert in an App",
+        "link": "https://www.wired.com/story/ifixit-chatbot-app-fixbot-point-your-camera-at-what-you-want-to-fix/",
+        "published": "Tue, 09 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "FixBot can check on the health of your devices and talk you through necessary repairs. You can even point your phone's camera at broken gear to get started."
+    },
+    {
+        "id": "https://www.wired.com/gallery/gift-for-the-home-chef-2025/",
+        "title": "21 Best Gifts for Cooks (2025): Vitamix, Frying Pans, Air Fryers",
+        "link": "https://www.wired.com/gallery/gift-for-the-home-chef-2025/",
+        "published": "Tue, 09 Dec 2025 12:38:00 +0000",
+        "source": "WIRED",
+        "summary": "From the best air fryer to frying pans to knife sharpeners anyone can use, these ideas will keep the curious home chef in your life tinkering away."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/nvidia-can-now-sell-its-high-end-ai-chips-to-approved-customers-in-china-trump-says-130007458.html?src=rss",
+        "title": "NVIDIA can now sell its high-end AI chips to 'approved customers in China,' Trump says",
+        "link": "https://www.engadget.com/big-tech/nvidia-can-now-sell-its-high-end-ai-chips-to-approved-customers-in-china-trump-says-130007458.html?src=rss",
+        "published": "Tue, 09 Dec 2025 13:00:07 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>NVIDIA is now allowed to sell its second-best H200 processors to China, rather than just the <a href=\"https://www.engadget.com/ai/china-reportedly-bans-tech-companies-from-buying-nvidias-ai-chips-120143740.html\">sanction-approved H20 model</a> that China had previously declined to buy, President Trump wrote on <a href=\"https://truthsocial.com/@realDonaldTrump/posts/115686072737425841\">Truth Social</a>. The United States will collect a 25 percent tariff on those sales, the Commerce Department "
+    },
+    {
+        "id": "https://www.engadget.com/general/ifixits-new-app-uses-ai-to-help-you-repair-your-stuff-130000091.html?src=rss",
+        "title": "iFixit\u2019s new app uses AI to help you repair your stuff",
+        "link": "https://www.engadget.com/general/ifixits-new-app-uses-ai-to-help-you-repair-your-stuff-130000091.html?src=rss",
+        "published": "Tue, 09 Dec 2025 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>We\u2019ve all been there: You can\u2019t (or won\u2019t) get help when something breaks, but the YouTube clip doesn\u2019t cover your specific issue. It\u2019s what <a class=\"link\" href=\"https://www.engadget.com/wearables/ifixit-says-the-pixel-watch-4-is-the-most-repairable-smartwatch-around-171242107.html\" target=\"_blank\">repair gurus at iFixit</a> want to solve with <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=c00d85db-85fb-45f3-a540-57642aa8e3f6&amp;siteId=us-engadget&amp;pa"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/the-year-age-verification-laws-came-for-the-open-internet-130000979.html?src=rss",
+        "title": "The year age verification laws came for the open internet",
+        "link": "https://www.engadget.com/big-tech/the-year-age-verification-laws-came-for-the-open-internet-130000979.html?src=rss",
+        "published": "Tue, 09 Dec 2025 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>When the nonprofit Freedom House recently published its annual report, it noted that 2025 marked the <a class=\"link\" href=\"https://freedomhouse.org/report/freedom-net/2025/uncertain-future-global-internet\" target=\"_blank\">15th straight year</a> of decline for global internet freedom. The biggest decline, after Georgia and Germany, came within the United States.</p><p>Among the culprits cited in the report: age verification laws, dozens of which have come into effect over the last year. &quot;"
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-122328464.html?src=rss",
+        "title": "The Morning After: Tech\u2019s biggest winners of 2025",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-122328464.html?src=rss",
+        "published": "Tue, 09 Dec 2025 12:23:28 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>As we wrap up 2025, we\u2019re looking at the year\u2019s <a href=\"https://www.engadget.com/techs-biggest-winners-of-2025-180000177.html\">biggest winners</a>: the people, companies, products and trends that made the most impact over the year. Almost at the top of the pile, of course, are the tech billionaires.&nbsp;</p>\n<p>According to a recent report by Oxfam, the 10 richest US billionaires (who are all tech leaders, save for Warren Buffet) increased their wealth by $698 billion in 2025. Some of that "
+    },
+    {
+        "id": "https://gizmodo.com/amazon-offloads-eurekas-robot-vacuum-and-mop-combo-at-an-all-time-low-for-holiday-clearance-2000697113",
+        "title": "Amazon Offloads Eureka\u2019s Robot Vacuum and Mop Combo at an All-Time Low for Holiday Clearance",
+        "link": "https://gizmodo.com/amazon-offloads-eurekas-robot-vacuum-and-mop-combo-at-an-all-time-low-for-holiday-clearance-2000697113",
+        "published": "Tue, 09 Dec 2025 12:40:25 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Eureka 2\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/Eureka_2.jpg\" width=\"1500\" /><br /><br />There's no reason you should have to spend time vacuuming your home."
+    },
+    {
+        "id": "https://gizmodo.com/samsung-apple-and-google-phones-are-practically-free-as-mint-mobile-extends-its-black-friday-promo-longer-than-planned-2000696618",
+        "title": "Samsung, Apple, and Google Phones Are Practically Free as Mint Mobile Extends Its Black Friday Promo Longer Than Planned",
+        "link": "https://gizmodo.com/samsung-apple-and-google-phones-are-practically-free-as-mint-mobile-extends-its-black-friday-promo-longer-than-planned-2000696618",
+        "published": "Tue, 09 Dec 2025 12:30:45 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Mint Mobile\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/Mint-Mobile.jpg\" width=\"1500\" /><br /><br />Switch to Mint Mobile's unlimited talk and text and high-speed data for just $15 per month and add one of these great phones at incredible prices, now through Dec. 31."
+    },
+    {
+        "id": "https://mashable.com/article/jon-hamm-tiktok-meme",
+        "title": "TikTok is blissing out on the dancefloor with Jon Hamm",
+        "link": "https://mashable.com/article/jon-hamm-tiktok-meme",
+        "published": "Tue, 09 Dec 2025 12:43:43 +0000",
+        "source": "Mashable",
+        "summary": "If you've noticed Jon Hamm perpetually blissing out on your TikTok FYP to \"Turn the Lights Off\", join the club."
+    },
+    {
+        "id": "https://mashable.com/article/best-hbo-max-deals-december-2025",
+        "title": "The best HBO Max deals and bundles in December 2025",
+        "link": "https://mashable.com/article/best-hbo-max-deals-december-2025",
+        "published": "Tue, 09 Dec 2025 12:30:03 +0000",
+        "source": "Mashable",
+        "summary": "In December 2025, HBO Max is offering bundle deals with its service so you can stream excellent shows and movies at a discounted price."
+    },
+    {
+        "id": "https://www.arxiv.org/pdf/2511.10811",
+        "title": "Transformers know more than they can tell: Learning the Collatz sequence",
+        "link": "https://www.arxiv.org/pdf/2511.10811",
+        "published": "Wed, 03 Dec 2025 17:50:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46137596\">Comments</a>"
+    },
+    {
+        "id": "https://retrogamecoders.com/zx-spectrum-next-on-the-internet-xberry-pi-esp01-and-pi-zero-upgrades/",
+        "title": "ZX Spectrum Next on the Internet: Xberry Pi ESP01 and Pi Zero Upgrades",
+        "link": "https://retrogamecoders.com/zx-spectrum-next-on-the-internet-xberry-pi-esp01-and-pi-zero-upgrades/",
+        "published": "Tue, 09 Dec 2025 10:52:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46203499\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/09/1129029/the-download-a-peek-at-ais-future/",
+        "title": "The Download: a peek at AI\u2019s future",
+        "link": "https://www.technologyreview.com/2025/12/09/1129029/the-download-a-peek-at-ais-future/",
+        "published": "Tue, 09 Dec 2025 13:10:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This is today&#8217;s edition of&#160;The Download,&#160;our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. The State of AI: A vision of the world in 2030\u00a0\u00a0 There are huge gulfs of opinion when it comes to predicting the near-future impacts of generative AI. In one camp there are&#8230;"
     }
 ]
