📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3534,5 +3534,77 @@
         "published": "Tue, 09 Dec 2025 13:10:00 +0000",
         "source": "MIT Technology Review",
         "summary": "This is today&#8217;s edition of&#160;The Download,&#160;our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. The State of AI: A vision of the world in 2030\u00a0\u00a0 There are huge gulfs of opinion when it comes to predicting the near-future impacts of generative AI. In one camp there are&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/empromptu-raises-2m-pre-seed-to-help-enterprises-build-ai-apps/",
+        "title": "Empromptu raises $2M pre-seed to help enterprises build AI apps",
+        "link": "https://techcrunch.com/2025/12/09/empromptu-raises-2m-pre-seed-to-help-enterprises-build-ai-apps/",
+        "published": "Tue, 09 Dec 2025 13:51:22 +0000",
+        "source": "TechCrunch",
+        "summary": "Empromptu claims all a user has to do is tell the platform's AI chatbot what they want \u2014 like a new HTML or JavaScript app \u2014 and the AI will go ahead and build it."
+    },
+    {
+        "id": "https://www.theverge.com/news/840142/aura-text-to-frame-digital-picture-frame-share-photos",
+        "title": "You can now text photos directly to Aura&#8217;s digital picture frames",
+        "link": "https://www.theverge.com/news/840142/aura-text-to-frame-digital-picture-frame-share-photos",
+        "published": "2025-12-09T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "It's now easier for friends and family who aren't tech savvy or are struggling with app fatigue to share images via your Aura digital photo frame. As the name of the new \"text to frame\" feature implies, photos can now be shared to an Aura frame through a text message, and they will be automatically [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/soundpeats-h3/",
+        "title": "Soundpeats H3 Review: Triple-Driver Wireless Earbuds",
+        "link": "https://www.wired.com/review/soundpeats-h3/",
+        "published": "Tue, 09 Dec 2025 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "You don\u2019t need to be an audiophile to appreciate how great these buds sound."
+    },
+    {
+        "id": "https://www.engadget.com/techs-biggest-losers-of-2025-140000419.html?src=rss",
+        "title": "Tech's biggest losers of 2025",
+        "link": "https://www.engadget.com/techs-biggest-losers-of-2025-140000419.html?src=rss",
+        "published": "Tue, 09 Dec 2025 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It\u2019s the end of another year, so it\u2019s time for the Engadget staff to compile a list of <a class=\"link\" href=\"https://www.engadget.com/techs-biggest-losers-in-2024-140039822.html\" target=\"_blank\">the year\u2019s biggest losers</a>. We scour over articles from the previous 12 months to determine the people, companies, products and trends that made our lives worse over the course of the year. Some selections may be so pervasive they actually make our list of biggest winners. But, for the most part, w"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/eu-opens-antitrust-investigation-into-googles-ai-practices-133015762.html?src=rss",
+        "title": "EU opens antitrust investigation into Google's AI practices",
+        "link": "https://www.engadget.com/big-tech/eu-opens-antitrust-investigation-into-googles-ai-practices-133015762.html?src=rss",
+        "published": "Tue, 09 Dec 2025 13:30:15 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Google is no stranger to scrutiny from government bodies such as the <a href=\"https://www.engadget.com/big-tech/ftc-investigating-ad-sale-practices-at-google-and-amazon-160236895.html\">US Federal Trade Commission</a> (FTC) the <a href=\"https://www.engadget.com/big-tech/the-uks-antitrust-regulator-will-keep-a-closer-eye-on-google-search-130021994.html\">UK Competition and Markets Authority</a> (CMA), and the <a href=\"https://www.engadget.com/big-tech/the-eus-new-charges-against-google-could-lea"
+    },
+    {
+        "id": "https://gizmodo.com/robert-picardo-star-trek-starfleet-academy-doctor-emh-voyager-2000696982",
+        "title": "Yes, \u2018Starfleet Academy\u2019 Is Bringing the Actual \u2018Voyager\u2019 Doctor Back to Life",
+        "link": "https://gizmodo.com/robert-picardo-star-trek-starfleet-academy-doctor-emh-voyager-2000696982",
+        "published": "Tue, 09 Dec 2025 13:00:04 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Ms 1209 Emh Voyager Starfleet Academy\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/MS-1209-EMH-voyager-starfleet-academy.jpg\" width=\"1920\" /><br /><br />Plus get a tiny glimpse of 'Supergirl' ahead of its first trailer this week."
+    },
+    {
+        "id": "https://mashable.com/article/gooning-fetish-of-the-year-clips4sale",
+        "title": "Adult sites fetish of 2026 is a 180 from last year",
+        "link": "https://mashable.com/article/gooning-fetish-of-the-year-clips4sale",
+        "published": "Tue, 09 Dec 2025 14:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The adult site Clips4Sale has announced that gooning is its 2026 fetish of the year."
+    },
+    {
+        "id": "https://www.zdnet.com/article/verified-on-linkedin-badge-free-all-websites-apps-deepfakes/",
+        "title": "How to prove you're not a deepfake on Zoom: LinkedIn's 'verified' badge is now free for all platforms",
+        "link": "https://www.zdnet.com/article/verified-on-linkedin-badge-free-all-websites-apps-deepfakes/",
+        "published": "Tue, 09 Dec 2025 14:00:00 GMT",
+        "source": "Latest news",
+        "summary": "The 'Verified on LinkedIn' program is now available to all websites and apps. Can you trust the internet again?"
+    },
+    {
+        "id": "https://radanskoric.com/articles/frozen-test-fixtures",
+        "title": "Why frozen test fixtures are a problem on large projects and how to avoid them",
+        "link": "https://radanskoric.com/articles/frozen-test-fixtures",
+        "published": "Tue, 09 Dec 2025 11:58:02 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46203948\">Comments</a>"
     }
 ]
